# phex-runtime

./: LICENSE  README.md  pyproject.toml
phex/runtime/: configuration.py  protocol.py  registry.py  services.py
phex_runtime/: configuration.py
tests/: conftest.py  test_load_config.py  test_phex_runtime.py  test_registry.py  test_services.py
tests/config/: phex.yaml
tests/services/test_async/: __init__.py
tests/services/test_sync/: __init__.py
